--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@ http://wx3.sinaimg.cn/large/0060lm7Tly1fydjpfzugnj30sg0iywgy.jpg
 
 		-->
 		<div v-if='panel=="front"' id="首页背景" class="d-flex flex-column justify-content-between" style="min-height:80vh; background:url('http://wx4.sinaimg.cn/large/0060lm7Tly1fy58bry93mj31a80m7wlq.jpg')  center center; background-size: cover; ">
-			<div class="d-none d-md-block animated slideInDown" style="background-color: rgba(0, 0, 0, 0.4)">
-				<p class="text-light text-center animated slideInDown delay-1s" style="font-size: 10vmin;">英国房产大全</p>
+			<div class="d-none d-md-block animated slideInDown delay-1s" style="background-color: rgba(0, 0, 0, 0.4)">
+				<p class="text-light text-center animated slideInDown delay-2s" style="font-size: 10vmin;">英国房产大全</p>
 			</div>
-			<div class="mt-auto animated slideInUp " style="background-color: rgba(0, 0, 0, 0.6);">
+			<div class="mt-auto animated slideInUp delay-1s" style="background-color: rgba(0, 0, 0, 0.6);">
 				<div class="mx-md-5 my-2 text-center">
 					<div class="row justify-content-center">
-						<div class="col-md-3 m-1 p-2 rounded border-light border animated slideInUp delay-1s" style="background-color: rgba(255, 255, 255, 0.3);">
+						<div class="col-md-3 m-1 p-2 rounded border-light border animated slideInUp delay-2s" style="background-color: rgba(255, 255, 255, 0.3);">
 							<a href="#about">
 								<h4 class="text-light">
 									<i class="fa fa-group"></i>&nbsp;伦敦豪宅置业私人顾问
@@ -97,7 +97,7 @@ http://wx3.sinaimg.cn/large/0060lm7Tly1fydjpfzugnj30sg0iywgy.jpg
 								</p>
 							</a>
 						</div>
-						<div class="col-md-3 m-1 p-2 rounded border-light border animated slideInUp delay-1s" style="background-color: rgba(255, 255, 255, 0.3);">
+						<div class="col-md-3 m-1 p-2 rounded border-light border animated slideInUp delay-2s" style="background-color: rgba(255, 255, 255, 0.3);">
 							<a v-if='r.count' href="/?mode=grid">
 								<h4 class="text-light">
 									<i class="fa fa-line-chart"></i>&nbsp;实时大数据:近7日新增房源
@@ -106,7 +106,7 @@ http://wx3.sinaimg.cn/large/0060lm7Tly1fydjpfzugnj30sg0iywgy.jpg
 									曼彻斯特{{r.count.Manchester}}套 (每分钟动态更新)</p>
 							</a>
 						</div>
-						<div class="col-md-3 m-1 p-2 rounded border-light border animated slideInUp delay-1s" style="background-color: rgba(255, 255, 255, 0.3);">
+						<div class="col-md-3 m-1 p-2 rounded border-light border animated slideInUp delay-2s" style="background-color: rgba(255, 255, 255, 0.3);">
 							<h4 class="text-light">
 								<i class="fa fa-graduation-cap"></i>&nbsp;学区房投资
 							</h4>
